hphp/test/zend/good/tests/lang/bug30638.php.skipif
<?php  # try to activate a german locale
if (substr(PHP_OS, 0, 3) == 'WIN') {
    /* skip on windows until #63688 was fixed */
    die('skip');
}
if (setlocale(LC_NUMERIC, "de_DE.UTF-8", "de_DE", "de", "german", "ge", "de_DE.ISO-8859-1") === FALSE) {
	print "skip setlocale() failed";
} elseif (strtolower(php_uname('s')) == 'darwin') {
    print "skip ok to fail on MacOS X";
}
?>