hphp/test/zend/bad/ext/date/tests/date_default_timezone_get-1-win32.php.skipif
<?php
       if(substr(PHP_OS, 0, 3) != 'WIN') die("skip skip on non windows");
?>